db_check.err
[eval]:1
const {PrismaClient}=require('@prisma/client');const p=new PrismaClient();p.serviceProduct.findMany({include:{sitter:{select:{id:true,name:true,avatar:true}}}}).then(r=>{console.log(JSON.stringify(r,null,2));p.\()}).catch(e=>{console.error(e.message);p.\()})
                                                                                                                                                                                                                  ^
Expected ident

SyntaxError: Invalid or unexpected token
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v24.15.0
